# rag-tui

./: CHANGELOG.md  README.md  pyproject.toml
rag_tui/: __init__.py  app.py
rag_tui/core/: llm.py  providers.py
rag_tui/widgets/: help_overlay.py  parameter_panel.py
tests/: test_production.py
