[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-tui"
version = "0.0.2b1"
description = "Interactive terminal UI for visualizing, debugging, and tuning RAG chunking pipelines"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Muhammed Rasin", email = "rasinbinabdulla@gmail.com"}
]
keywords = [
    "rag",
    "chunking",
    "llm",
    "retrieval-augmented-generation",
    "tui",
    "terminal",
    "textual",
    "debugging",
    "vector-search",
    "embeddings"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Text Processing :: General",
]

dependencies = [
    "textual>=0.40.0",
    "chonkie>=0.1.0",
    "ollama>=0.1.0",
    "rich>=13.0.0",
    "usearch>=2.0.0",
    "numpy>=1.24.0",
    "pypdf>=3.0.0",
    "pyyaml>=6.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/rasinmuhammed/rag-tui"
Documentation = "https://github.com/rasinmuhammed/rag-tui#readme"
Repository = "https://github.com/rasinmuhammed/rag-tui"
Issues = "https://github.com/rasinmuhammed/rag-tui/issues"

[project.scripts]
rag-tui = "rag_tui.app:main"

[tool.hatch.build.targets.wheel]
packages = ["rag_tui"]
